crates/ui/tests/snapshots/panel_snapshots__strategies_empty.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: strategies_summary(&c)
---
panel: strategies
title: Strategies
state: empty
copy: No strategies loaded. Drop a TOML under config/strategies/ to begin.
