crates/ui/tests/snapshots/panel_snapshots__strategies_error.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: strategies_summary(&c)
---
panel: strategies
title: Strategies
state: error
copy: Can't read strategies: Trading agent disconnected. Check the agent log and restart it.
