crates/ui/tests/snapshots/panel_snapshots__strategies_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: strategies_summary(&c)
---
panel: strategies
title: Strategies
state: loading
copy: Loading active strategies…
