crates/ui/tests/snapshots/panel_snapshots__tape_error.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: tape_summary(&c)
---
panel: tape
title: Live tape
state: error
paused: false
copy: Can't read the fill stream: broadcast channel closed
