crates/ui/tests/snapshots/panel_snapshots__tape_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: tape_summary(&c)
---
panel: tape
title: Live tape
state: loading
paused: false
copy: Connecting to the fill stream…
